Fix layout issue on screen-lg about page

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -672,4 +672,14 @@ a {
   .bg-hidden-mobile {
     height:390px;
   }
+  .about .col-right{
+    width:740px;
+  }
+  .about .col-right .content {
+    width: 100%;
+    padding-right:10px;
+  }
+  .about .scroll-all {
+    width: 1100px;
+  }
 }
